objects/CSS_Make_Model_Access__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationCategory__c</fullName>
        <label>ApplicationCategory</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineFamilyCode__c</fullName>
        <label>EngineFamilyCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentId__c</fullName>
        <label>EquipmentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Code_Make_Model__c</fullName>
        <formula>EngineFamilyCode__c + Make__c + Model__c</formula>
        <label>Family Code Make Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <label>Fault Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FourToSixLhr__c</fullName>
        <label>FourToSixLhr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Estimate__c</fullName>
        <label>Labor Estimate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LessThanTwoLhr__c</fullName>
        <label>LessThanTwoLhr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoreThanSixLhr__c</fullName>
        <label>MoreThanSixLhr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Model_Name__c</fullName>
        <label>Service Model Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwoToFourLhr__c</fullName>
        <label>TwoToFourLhr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Make Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>EngineFamilyCode__c</columns>
        <columns>Access__c</columns>
        <columns>EquipmentId__c</columns>
        <columns>NAME</columns>
        <columns>UniqueKey__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CSS_Make_Model_Access__c.SRTData</value>
        </filters>
        <filters>
            <field>Model__c</field>
            <operation>equals</operation>
            <value>ALCO</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSS Make Model Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Make Models</pluralLabel>
    <recordTypes>
        <fullName>IAData</fullName>
        <active>true</active>
        <label>IAData</label>
    </recordTypes>
    <recordTypes>
        <fullName>SRTData</fullName>
        <active>true</active>
        <label>SRTData</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>